--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <!-- Botpress Chatbot -->
     <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js" defer></script>
     <script src="https://files.bpcontent.cloud/2025/08/09/19/20250809195719-5V5LMRXW.js" defer></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
 </html>
